--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -201,7 +201,7 @@ href="{{ url_for('static', filename='img/site/logo_min.png') }}">
       href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/googlecode.min.css">
 <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script> -->
 <script src="//lib.baomitu.com/jquery/1.8.3/jquery.min.js"></script>
-<!-- <script src="{{ url_for('static', filename = 'js/plugin.js' ) }}"></script> -->
+<script src="{{ url_for('static', filename = 'js/plugin.js' ) }}"></script>
 <script src="{{ url_for('static', filename = 'js/diaspora.js' ) }}"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename = 'photoswipe/photoswipe.css' )}}">
 <link rel="stylesheet" href="{{ url_for('static', filename = 'photoswipe/default-skin/default-skin.css' ) }}">
