--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -69,7 +69,7 @@
       href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/atelier-heath-dark.min.css">
 <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script> -->
 <script src="//lib.baomitu.com/jquery/1.8.3/jquery.min.js"></script>
-<!-- <script src="{{ url_for('static', filename = 'js/plugin.js' ) }}"></script> -->
+<script src="{{ url_for('static', filename = 'js/plugin.js' ) }}"></script>
 <script src="{{ url_for('static', filename = 'js/diaspora.js' ) }}"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename = 'photoswipe/photoswipe.css' ) }}">
 <link rel="stylesheet" href="{{ url_for('static', filename = 'photoswipe/default-skin/default-skin.css' ) }}">
