--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block index_image %}
 <div class="layer" data-depth="0.4">
-    <img src="{{ index_imageurl }}" id="cover" crossorigin=""  width="1920" height="1080">    
+    <img src="{{ index_imageurl }}" id="cover" width="1920" height="1080">    
 </div>
 {% endblock %}
 
