--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -116,6 +116,9 @@ function add_archive(data){
         new_div_post.id = item.filename;
         new_a.href = item.href;
         new_img.src = item.imgurl;
+        new_img.class = "cover";
+        new_img.width = "680";
+        new_img.height = "440";
         new_a.appendChild(new_img);
 
         new_div_post.appendChild(new_a);
