new_img classname

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -112,11 +112,11 @@ function add_archive(data){
         new_div_post.className = "post";
         new_div_else.className = 'else'
         new_else_a.className = 'posttitle';
+        new_img.className = "cover";
 
         new_div_post.id = item.filename;
         new_a.href = item.href;
         new_img.src = item.imgurl;
-        new_img.class = "cover";
         new_img.width = "680";
         new_img.height = "440";
         new_a.appendChild(new_img);
