js del rempve pager

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -219,6 +219,7 @@ else {
 
 // 已经没有数据的时候 再次点击加载更多 会消失
 function remove_pager() { 
+    console.log("remove parger")
     $('#pager').remove();
 }
 </script>
