删除留言区<p> 因为加了markdown

--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -99,8 +99,8 @@ href="{{ url_for('static', filename='img/site/logo_min.png') }}">
                      height="40" width="40"> <cite class="fn"><a href="http://www.rootpei.com" rel="external nofollow" class="url">{{ commitem.author }}</a></cite><span
                      class="says">说道：</span> </div>
         
-                <div class="comment-meta commentmetadata"><a href="">
-                        {{ commitem.date }} </a>
+                <div class="comment-meta commentmetadata"><p>
+                        {{ commitem.date }} </p>
                 </div>
         
                 {{commitem.comment|safe}} 
