--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -103,7 +103,7 @@ href="{{ url_for('static', filename='img/site/logo_min.png') }}">
                         {{ commitem.date }} </p>
                 </div>
         
-                {{commitem.comment|safe}}  为什么有p
+                {{commitem.comment|safe}}  
         
                 <div class="reply">
                     <a rel="nofollow" class="comment-reply-link" href="#submit" 
