photoswipe.minjs --> photswipe.js

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -79,8 +79,8 @@
 <script src="{{ url_for('static', filename = 'js/diaspora.js' ) }}"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename = 'photoswipe/photoswipe.css' ) }}">
 <link rel="stylesheet" href="{{ url_for('static', filename = 'photoswipe/default-skin/default-skin.css' ) }}">
-<script src="{{ url_for('static', filename = 'photoswipe/photoswipe.min.js' ) }}"></script>
-<script src="{{ url_for('static', filename = 'photoswipe/photoswipe-ui-default.min.js' ) }}"></script>
+<script src="{{ url_for('static', filename = 'photoswipe/photoswipe.js' ) }}"></script>
+<script src="{{ url_for('static', filename = 'photoswipe/photoswipe-ui-default.js' ) }}"></script>
 <!-- <script >hljs.initHighlightingOnLoad();</script>   -->
 {% endblock %}  
 
