--- a/app/templates/base/hexo_article.html
+++ b/app/templates/base/hexo_article.html
@@ -5,6 +5,9 @@
     {% block head %}   
  
     {% endblock %} 
+    <link rel="stylesheet"
+      href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/googlecode.min.css">
+<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
 </head>
 
 <body class="loading">
