--- a/app/templates/base/hexo_index.html
+++ b/app/templates/base/hexo_index.html
@@ -24,7 +24,9 @@ href="{{ url_for('static', filename='img/site/logo_min.png') }}">
 href="{{ url_for('static', filename='img/site/logo_min.png') }}">
 <link rel="icon" type="image/png"
 href="{{ url_for('static', filename='img/site/logo_min.png') }}">
-
+<link rel="stylesheet"
+      href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/googlecode.min.css">
+<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
 </head>
 
 <body class="loading">
