--- a/app/static/css/diaspora.css
+++ b/app/static/css/diaspora.css
@@ -213,9 +213,9 @@ h1.title {font-size:30px;color:#333;line-height:1.3;position:relative;font-weigh
 .content pre,.content .highlight {background:#f6f8fa;margin:1.6rem 0;padding:0.8rem 0.8rem;border-style:solid;border-width:0 0;overflow:auto;color:#40485b;line-height:20px;}
 .content .gutter {display:none;}
 .content .highlight .gutter pre {color:#666;font-size:0.9rem;}
-.content code,.content pre {font-family:"Source Code Pro",monospace}
+/* .content code,.content pre {font-family:"Source Code Pro",monospace} */
 .content code {background:#f1f1f1;color:#382f37;padding:1px 2px;border-radius:2px;}
-.content pre code {background:none;color:#404040;text-shadow:none;padding:0; margin-bottom:-1;border-bottom-right-radius:2px;border-bottom-left-radius:2px;}
+.content pre code {background:none;color:#40406A;text-shadow:none;padding:0; margin-bottom:-1;border-bottom-right-radius:2px;border-bottom-left-radius:2px;}
 .content blockquote {color:#656565;margin:0 0 1.1em;border-left:3px solid #efefef;border-left-width:6px;background-color:rgba(119,119,119,0.05);border-top-right-radius:5px;border-bottom-right-radius:5px;padding:15px 20px;}
 .content blockquote p {margin:0;}
 .content table {margin:15px 0;border-collapse:collapse;display:table;width:100%;table-layout:automatic;word-wrap:break-word;}
