--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -197,17 +197,18 @@ href="{{ url_for('static', filename='img/site/logo_min.png') }}">
 
 
 {% block why_js_is_here %}    
-<!-- <link rel="stylesheet"
-      href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/googlecode.min.css">
-<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script> -->
+
 <script src="//lib.baomitu.com/jquery/1.8.3/jquery.min.js"></script>
 <script src="{{ url_for('static', filename = 'js/plugin.js' ) }}"></script>
 <script src="{{ url_for('static', filename = 'js/diaspora.js' ) }}"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename = 'photoswipe/photoswipe.css' )}}">
 <link rel="stylesheet" href="{{ url_for('static', filename = 'photoswipe/default-skin/default-skin.css' ) }}">
 <script src="{{ url_for('static', filename = 'photoswipe/photoswipe.min.js' ) }}"></script>
-<script src="{{ url_for('static', filename = 'photoswipe/photoswipe-ui-default.min.js' ) }}"></script>
-<!-- <script >hljs.initHighlightingOnLoad();</script>   -->
+<script src="{{ url_for('static', filename = 'photoswipe/photoswipe-ui-default.min.js' ) }}"></script>  
+<script>
+    hljs.initHighlightingOnLoad();
+</script>
+
 {% endblock  %} 
 
 {% block div_pswp %}   
