--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -70,18 +70,17 @@
 {% endblock  %} 
 
 {% block why_js_is_here %}   
-<!-- <script src="//cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script> -->
-<!-- <link rel="stylesheet"
-      href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/atelier-heath-dark.min.css">
-<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script> -->
+
 <script src="//lib.baomitu.com/jquery/1.8.3/jquery.min.js"></script>
 <script src="{{ url_for('static', filename = 'js/plugin.js' ) }}"></script>
 <script src="{{ url_for('static', filename = 'js/diaspora.js' ) }}"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename = 'photoswipe/photoswipe.css' ) }}">
 <link rel="stylesheet" href="{{ url_for('static', filename = 'photoswipe/default-skin/default-skin.css' ) }}">
 <script src="{{ url_for('static', filename = 'photoswipe/photoswipe.min.js' ) }}"></script>
-<script src="{{ url_for('static', filename = 'photoswipe/photoswipe-ui-default.min.js' ) }}"></script>
-<!-- <script >hljs.initHighlightingOnLoad();</script>   -->
+<script src="{{ url_for('static', filename = 'photoswipe/photoswipe-ui-default.min.js' ) }}"></script>  
+<script>
+    hljs.initHighlightingOnLoad();
+</script>
 {% endblock %}  
 
 {% block add_script %}
