script hljs console

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -80,6 +80,7 @@
 <script src="{{ url_for('static', filename = 'photoswipe/photoswipe-ui-default.min.js' ) }}"></script>  
 <script>
     hljs.initHighlightingOnLoad();
+    console.log("首页初始化代码高亮");
 </script>
 {% endblock %}  
 
