--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -207,6 +207,7 @@ href="{{ url_for('static', filename='img/site/logo_min.png') }}">
 <script src="{{ url_for('static', filename = 'photoswipe/photoswipe-ui-default.min.js' ) }}"></script>  
 <script>
     hljs.initHighlightingOnLoad();
+    console.log("文章初始化代码高亮");
 </script>
 
 {% endblock  %} 
